Integrated Backend with frontend